tests/baselines/reference/jsxAndTypeAssertion.errors.txt
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(7,19): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(9,10): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(11,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(13,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(15,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(17,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(17,23): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(19,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.


==== tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx (8 errors) ====
    
    declare var createElement: any;
    
    class foo {}
    
    var x: any;
    x = <any> { test: <any></any> };
                      ~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    x = <any><any></any>;
             ~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     
    x = <foo>hello {<foo>{}} </foo>;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    x = <foo test={<foo>{}}>hello</foo>;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    x = <foo test={<foo>{}}>hello{<foo>{}}</foo>;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    x = <foo>x</foo>, x = <foo/>;
        ~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
                          ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <foo>{<foo><foo>{/foo/.test(x) ? <foo><foo></foo> : <foo><foo></foo>}</foo>}</foo>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
        
    